.get(0) bug fix